added the second ans then third blog

--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <h3>my first webst</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quam blanditiis eaque sed temporibus vero inventore sit mollitia ut quidem explicabo quisquam aut ullam voluptatem, distinctio odit adipisci obcaecati dolor!</p>
     </div>
+    <div>
+        <h3>my second blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quam blanditiis eaque sed temporibus vero inventore sit mollitia ut quidem explicabo quisquam aut ullam voluptatem, distinctio odit adipisci obcaecati dolor!</p>
+    </div>
+    <div>
+        <h3>my third blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quam blanditiis eaque sed temporibus vero inventore sit mollitia ut quidem explicabo quisquam aut ullam voluptatem, distinctio odit adipisci obcaecati dolor!</p>
+    </div>
 </body>
 </html>
