added a list to push cord

--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
         <h3>my third blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quam blanditiis eaque sed temporibus vero inventore sit mollitia ut quidem explicabo quisquam aut ullam voluptatem, distinctio odit adipisci obcaecati dolor!</p>
     </div>
+    <div>
+        <h1>how to push incremental cord</h1>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a menningful commit message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
